web1/nginx.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: web1
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
      - name: web1
        #image: nginx:1.7.9
        image: "localhost:5000/web1"
        ports:
        - containerPort: 80
