web1/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: web1
spec:
  selector:
    app: web1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
